Fixed various smaller issues, added apdf-renderer, added bcprov